# reccs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.yml  install.sh  requirements.txt  run_test.sh
.github/hooks/: pre-commit
.github/workflows/: run_tests.yml
app/: networkit_test.cpp  reccs.cpp  reccspp.cpp  sbm.cpp
archive/: .gitmodules  CMakeLists.txt
archive/lib/algorithm/: sbm.h
archive/lib/data_structures/: edge_iterator.h
archive/lib/io/: graph_io.h
eval/: check_outputs.py  eval_pipeline.sh  eval_pipeline_mini.sh
experiments/: cluster_splitter_test.sh  di_loader_test.sh  dl_loader_isolated.sh  igraph_runtime_test.sh  reccs_test.sh
extlib/: cluster_splitter.py  compute_deficits.py  compute_degseq.py  correct_degree.py  gen_SBM.py  gen_SBM_degseq.py  splitter.py  stats.py  tsv_union.py
lib/algorithm/: deg_seq_matching.h  deg_seq_matching_v1.h  deg_seq_matching_v2.h  deg_seq_matching_with_budget.h  enforce_connectivity.h  enforce_connectivity_with_budget.h  enforce_degree_conn.h  enforce_min_degree.h  enforce_min_degree_with_budget.h  enforce_mincut.h  enforce_mincut_with_budget.h  sbm.h  sbm_gt.h
lib/algorithms/: degree_enforcer.h  graph_merger.h  graph_splitter.h  sbm.h
lib/data_structures/: available_node_degrees.h  clustering.h  graph.h  graph_task.h  graph_task_base.h  graph_task_pp.h  graph_task_queue.h  graph_task_queue_pp.h  graph_task_queue_with_degrees.h  mincut_result.h  node_degree.h  subgraph_pointer.h
lib/io/: cluster_io.h  degseq_io.h  g_io.h  graph_io.h  requirements_io.h
lib/utils/: edge_extractor.h  orchestrator.h  statics.h  subgraph_extractor.h
test/: area.py  check_outputs_test.py  unit_test.py
tests/: loader_test.cpp
